@@ -247,7 +247,7 @@ else
 fi
 
 # Check for functions and headers.
-AC_CHECK_FUNCS(posix_memalign memalign asprintf vasprintf getfsstat)
+AC_CHECK_FUNCS(posix_memalign memalign asprintf vasprintf getfsstat getmntany)
 AC_CHECK_HEADERS(libzfs.h libnvpair.h)
 
 # For opendisk() and getrawpartition() on NetBSD.
